# askdata

./: .gitignore  .ignore  README-old.md  README.md  THIRD_PARTY_LICENSES.txt  prompts_users  thirdpartynotices.txt
data/: tbl_ddl.sql
rest/: README.md  pyproject.toml  requirements.txt
rest/nl2sql-trust/: .coverage  constants.py  cov.sh  nl2sql_service.py  run_app.bash  service_controller.py  setup.py  tt_service_controller.py
rest/nl2sql-trust/conf/: metadata_v2.json  refresh_autofill_cache.json  release.txt  trust_config.json  upload_config.sh
rest/nl2sql-trust/helpers/: config_json_helper.py  database_util.py  engine.py  file_overwrite.py  finetune_db.py  finetune_helper.py  llm_helper.py  natural_language_util.py  oci_even_publisher.py  oci_helper_boostrap.py  oci_helper_json.py  operations_helper.py  schema.py  sql_coder.py  test_database.py  test_engine.py  test_finetune.py  test_llm.py  test_oci_helper.py  test_operations.py  test_trust_metrics.py  trust_metrics.py  tt1_trust_metrics.py  tt_trust_metrics.py  util.py
rest/nl2sql-trust/htmlcov/: __init___py.html  class_index.html  constants_py.html  function_index.html  index.html  nl2sql_service_py.html  service_controller_py.html  setup_py.html  status.json  z_36f028580bb02cc8___init___py.html  z_36f028580bb02cc8_resource_signer_py.html  z_36f028580bb02cc8_struc_test_py.html  z_5f5a17c013354698_administrative_api_py.html  z_5f5a17c013354698_bootstrap_api_py.html  z_5f5a17c013354698_engine_api_py.html  (+35 more)
rest/script/: AsLinuxService.md  nginx_Setup.md  nl2sql_rest.service  restart_rest_service.sh  trace.sh
(+479 files in other folders)
