[tool.poetry]
name = "nl2sql-trust"
version = "0.1.0"
description = "Natural Language to SQL - Trust Services"
authors = ["Serge Blais <serge.blais@oracle.com>", "Gregory Keys <greg.keys@oracle.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
poetry = "1.8.4"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
pytest = "8.3.3"
fastapi = "0.115.9"
fastjsonschema = "2.20.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.11.6"
aiosignal = "1.3.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.27.2"
parsedatetime = "2.6"
pydantic = "2.10.6"
pyopenssl = "24.2.1"
uvicorn = "0.32.0"
oracledb = "2.5.0"
oci = "2.139.0"
oci-cli = "3.50.2"
markdown = "3.7"

# Add the letsencrypt dependencies here
certbot = "3.1.0"
certbot-dns-oci = "0.3.5"

mkdocs = "1.6.1"
mkdocs-autorefs = "1.2.0"
mkdocs-get-deps = "0.2.0"
mkdocstrings = "0.27.0"
mkdocstrings-python = "1.12.2"

# Optional Extras (if you want to install letsencrypt-related dependencies optionally)
ads = "^0.12.7"
[tool.poetry.extras]
letsencrypt = ["certbot", "certbot-dns-oci"]
documentation = ["mkdocs","markdown","mkdocs-autorefs","mkdocs-get-deps","mkdocstrings","mkdocstrings-python"]
